network/compute.tf
# resource "aws_instance" "std11_ec2" {
#   ami           = "ami-042dc8681de073ac4"
#   instance_type = "t3.micro"

#   subnet_id                   = aws_subnet.std11_public_subnet["eu-central-1a"].id
#   associate_public_ip_address = true

#   vpc_security_group_ids = [
#     aws_security_group.std11_ssh_sg.id,
#     aws_security_group.std11_external_alb_sg.id,
#   ]

#   root_block_device {
#     volume_size           = 8
#     volume_type           = "gp3"
#     delete_on_termination = true
#   }

#   # 첫 줄 #!/bin/bash 앞에 공백 있으면 스크립트 전체가 안 돔
#   # nginx:alpine 은 도커 이미지 이름. apt 패키지는 nginx
#   user_data = <<-EOF
# #!/bin/bash
# apt-get update -y
# apt-get install -y nginx
# systemctl enable nginx
# systemctl start nginx
# echo "<html><body><h1>Hello, World!</h1></body></html>" > /var/www/html/index.html
# EOF

#   user_data_replace_on_change = true

#   tags = {
#     Name  = "${local.tag_header}ec2"
#     Class = "bipa17"
#     Owner = "std11"
#   }
# }

# output "std11_ec2_public_ip" {
#   value = aws_instance.std11_ec2.public_ip
# }


# # AMI 이미지 생성

# resource "aws_ami_from_instance" "std11_ec2_ami" {
#   name               = "${local.tag_header}ec2-ami"
#   source_instance_id = aws_instance.std11_ec2.id

#   snapshot_without_reboot = false

#   tags = {
#     Name  = "${local.tag_header}ec2-ami"
#     Class = "bipa17"
#     Owner = "std11"
#   }
# }

# output "std11_ec2_ami_id" {
#   value = aws_ami_from_instance.std11_ec2_ami.id
# }

# #########################################################################
# 키 페어 생성
# #########################################################################

resource "aws_key_pair" "std11_ec2_key" {
  key_name   = "std11-central-lab-key"
  public_key = file("~/.ssh/id_rsa.pub")

  tags = {
    Name = "std11-central-lab-key"
  }
}

output "std11_central_key_name" {
  value = aws_key_pair.std11_ec2_key.key_name
}

# #########################################################################
# 이미지로 EC2 인스턴스 생성
# #########################################################################

# resource "aws_instance" "std11_ec2_from_ami" {
#   ami                         = data.aws_ami.std11_ec2_ami.id # 이미지 ID
#   instance_type               = "t3.micro"                    # 인스턴스 타입
#   key_name                    = aws_key_pair.std11_ec2_key.key_name
#   subnet_id                   = aws_subnet.std11_public_subnet["eu-central-1a"].id
#   associate_public_ip_address = true
#   vpc_security_group_ids = [
#     aws_security_group.std11_ssh_sg.id,
#     aws_security_group.std11_external_alb_sg.id,
#   ]
#   root_block_device {
#     volume_size           = 20
#     volume_type           = "gp3"
#     delete_on_termination = true
#     tags = {
#       Name = "${local.tag_header}ec2-from-ami-root-volume"
#     }
#   }
#   tags = {
#     Name  = "${local.tag_header}ec2-from-ami"
#     Class = "bipa17"
#     Owner = "std11"
#   }
# }


resource "aws_launch_template" "std11_ec2_from_ami_launch_template" {
  name          = "${local.tag_header}ec2-from-ami-launch-template"
  image_id      = local.ami_id
  instance_type = "t3.nano"
  key_name      = aws_key_pair.std11_ec2_key.key_name
  vpc_security_group_ids = [
    aws_security_group.std11_ssh_sg.id,
    aws_security_group.std11_external_alb_sg.id,
  ]
  # 첫 줄 #!/bin/bash 앞에 공백 있으면 스크립트 전체가 안 돔
  # nginx:alpine 은 도커 이미지 이름. apt 패키지는 nginx base64encode 로 인코딩 핈구
  user_data = base64encode(<<-EOF
#!/bin/bash
systemctl enable nginx
systemctl start nginx
EOF
  )

  tags = {
    Name  = "${local.tag_header}ec2-from-ami-launch-template"
    Class = "bipa17"
    Owner = "std11"
  }
  tag_specifications {
    resource_type = "instance"
    tags = {
      Name = "${local.tag_header}ec2-from-ami-launch-template"
    }
  }
  tag_specifications {
    resource_type = "volume"
    tags = {
      Name = "${local.tag_header}ec2-from-ami-launch-template-root-volume"
    }
  }
}
