network/mysql.tf
# mysql.tf
# #########################################################################
# DB 서브넷 그룹. RDS 는 프라이빗 서브넷 2개 AZ 이상 필요
# #########################################################################

resource "aws_db_subnet_group" "std11_db_subnet_group" {
  name = "${local.tag_header}db-subnet-group"
  # 같은 폴더라 클러스터도 이 이름을 참조함. 두 파일에 resource 를 또 적으면 중복
  subnet_ids = [for s in aws_subnet.std11_private_subnet : s.id]

  tags = {
    Name = "${local.tag_header}db-subnet-group"
  }
}

# #########################################################################
# MySQL
# #########################################################################

resource "aws_db_instance" "std11_mysql_instance" {
  identifier     = "${local.tag_header}mysql-instance"
  engine         = "mysql"
  engine_version = "8.0"
  instance_class = "db.t3.micro"

  allocated_storage = 20

  db_name  = jsondecode(aws_secretsmanager_secret_version.std11_db_password_version.secret_string).database
  username = jsondecode(aws_secretsmanager_secret_version.std11_db_password_version.secret_string).username
  password = jsondecode(aws_secretsmanager_secret_version.std11_db_password_version.secret_string).password

  db_subnet_group_name = aws_db_subnet_group.std11_db_subnet_group.name
  availability_zone    = local.azs[0]

  vpc_security_group_ids = [
    aws_security_group.std11_mysql_sg.id
  ]

  backup_retention_period = 7
  skip_final_snapshot     = true

  tags = {
    Name = "${local.tag_header}mysql-instance"
  }
}

output "std11_mysql_endpoint" {
  value = aws_db_instance.std11_mysql_instance.address
}
